# Scions_old

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  zigzag
Scions/: CMakeLists.txt
Scions/common/: CMakeLists.txt  common.h  d_type.h  progress_bar.h  result.h
Scions/core/: CMakeLists.txt
Scions/core/graph/: CMakeLists.txt  OpComputeInfo.h  SequentialModel.cpp  SequentialModel.h  sequential_graph.h
Scions/core/graph/memory/: CMakeLists.txt  MemoryObject.cpp  MemoryObject.h  MemoryRef.h
Scions/core/graph/nodes/: CMakeLists.txt  Dense.cpp  Dense.h  Flatten.cpp  Flatten.h  Node.cpp  Node.h  NodeTypes.h  Relu.cpp  Relu.h
Scions/core/graph/ops/: CMakeLists.txt  Op.h  OpTypes.h
Scions/core/mem/: CMakeLists.txt  mem_desc.cpp  mem_desc.h  mem_object.cpp  mem_object.h  size_helper.h
Scions/core/op/: CMakeLists.txt  basic_op.h  op.cpp  op.h  op_ids.h  op_io.h  tensor_op.h
Scions/core/tensor/: CMakeLists.txt  TensorShape.h
Scions/ep/: CMakeLists.txt
Scions/ep/common/: CMakeLists.txt  bruh.cpp  common.h  runtime_sequential_graph.cpp  runtime_sequential_graph.h
Scions/ep/cpu/: CMakeLists.txt  CPUExecutionProvider.cpp  CPUExecutionProvider.h  cpu_ep.cpp  cpu_ep.h  cpu_execution_stats.h
Scions/ep/cpu/mem/: CMakeLists.txt  cpu_mem_object.cpp  cpu_mem_object.h  mem_manager.h
Scions/ep/cpu/op/: CMakeLists.txt  execute_op.h  tensor_ops.cpp  tensor_ops.h
Scions/execution_provider/: CMakeLists.txt  IExecutionProvider.cpp  IExecutionProvider.h
Scions/execution_provider/cpu/: CMakeLists.txt  CPUExecutionProvider.cpp  CPUExecutionProvider.h
Scions/execution_provider/cuda/: CMakeLists.txt  CUDAExecutionProvider.cpp  CUDAExecutionProvider.h
Scions/include/: CMakeLists.txt
Scions/include/ExecutionProvider/: CMakeLists.txt  IExecutionProvider.h
Scions/include/Foo/: CMakeLists.txt  library.h
Scions/include/common/: CMakeLists.txt  common.h  result.h
Scions/include/execution_provider/: CMakeLists.txt  IExecutionProvider.h
Scions/include/execution_provider/cpu/: CMakeLists.txt  CPUExecutionProvider.h
Scions/include/execution_provider/cuda/: CMakeLists.txt
Scions/include/graph/: CMakeLists.txt  CompiledGraph.h  Node.h  NodeComputeInfo.h  Op.h  OpComputeInfo.h  SequentialModel.cpp  SequentialModel.h
Scions/include/graph/memory/: CMakeLists.txt  MemoryObject.h  MemoryRef.h
Scions/include/graph/nodes/: CMakeLists.txt  Dense.h  Flatten.h  Node.h  NodeTypes.h  Relu.cpp  Relu.h
Scions/include/graph/ops/: CMakeLists.txt  Op.h
Scions/include/tensor/: TensorShape.h
Scions/src/: CMakeLists.txt
Scions/src/ExecutionProvider/: CMakeLists.txt  IExecutionProvider.cpp
Scions/src/Foo/: CMakeLists.txt  library.cpp
Scions/src/common/: CMakeLists.txt
Scions/src/execution_provider/: CMakeLists.txt  IExecutionProvider.cpp
Scions/src/graph/: CMakeLists.txt  Node.cpp  SequentialModel.cpp
Scions/src/graph/memory/: CMakeLists.txt  MemoryObject.cpp
Scions/src/graph/nodes/: CMakeLists.txt  Dense.cpp  Flatten.cpp  Node.cpp
cmake/: ScionsConfig.cmake.in  utils.cmake
examples/: CMakeLists.txt  gates.cpp  main.cpp
